[gd_scene load_steps=4 format=3 uid="uid://deet4wxltn35p"]

[ext_resource type="Script" path="res://chat_bubbles_simulator.gd" id="1_ndjp5"]
[ext_resource type="AudioStream" uid="uid://2sm8qcsffpk6" path="res://imessage_send.wav" id="2_annm5"]
[ext_resource type="AudioStream" uid="uid://ba2uu388l13pr" path="res://imessage_receive.wav" id="3_8ma3u"]

[node name="ChatBubblesSimulator" type="Node2D"]
script = ExtResource("1_ndjp5")

[node name="BackgroundColor" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Audio_iMessageSend" type="AudioStreamPlayer" parent="." groups=["Audio"]]
stream = ExtResource("2_annm5")
mix_target = 1
max_polyphony = 5

[node name="Audio_iMessageReceive" type="AudioStreamPlayer" parent="." groups=["Audio"]]
stream = ExtResource("3_8ma3u")
mix_target = 1
max_polyphony = 5
